--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-body{font-family:"Roboto",sans-serif}md-dialog{width:800px}
+body{font-family:"Roboto",sans-serif}.create-user-dialog{width:800px}md-toast.error .md-toast-content{background:#FF5252;color:white}md-toast.success .md-toast-content{background:#4CAF50;color:white}.adduser{cursor:pointer}
