--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,25 @@ body {
 	font-family: $font-stack;
 }
 
-md-dialog{
+.create-user-dialog {
 	width: 800px;
+}
+
+md-toast {
+  &.error {
+    .md-toast-content {
+      background: #FF5252;
+      color: white;
+    }
+  }
+  &.success {
+    .md-toast-content {
+      background: #4CAF50;
+      color: white;
+    }
+  }
+}
+
+.adduser {
+	cursor: pointer;
 }
